@@ -220,8 +220,8 @@ let simple_merged_annotated_return (type a) (t : a t) (a : a) =
 Line 3, characters 12-20:
 3 |   | IntLit, (3 as x)
                 ^^^^^^^^
-Error: This pattern matches values of type a
-       This instance of a is ambiguous:
+Error: This pattern matches values of type int
+       This instance of int is ambiguous:
        it would escape the scope of its equation
 |}]
 
