@@ -22,8 +22,8 @@ type ('a, 'b) eq = Refl : ('a, 'a) eq
 Line 4, characters 4-29:
 4 |   | Refl, [(_ : a) | (_ : b)] -> []
         ^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: This pattern matches values of type (a, b) eq * b list
-       This instance of b is ambiguous:
+Error: This pattern matches values of type (a, b) eq * a list
+       This instance of a is ambiguous:
        it would escape the scope of its equation
 |}]
 let fails (type a b) (x : (a, b) eq) =
@@ -35,8 +35,8 @@ let fails (type a b) (x : (a, b) eq) =
 Line 3, characters 4-29:
 3 |   | Refl, [(_ : a) | (_ : b)] -> []
         ^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: This pattern matches values of type (a, b) eq * b list
-       This instance of b is ambiguous:
+Error: This pattern matches values of type (a, b) eq * a list
+       This instance of a is ambiguous:
        it would escape the scope of its equation
 |}]
 
